--- a/ISAFINA.css
+++ b/ISAFINA.css
@@ -12,16 +12,7 @@ body{
 	margin:50px auto 0px;
 	color: white;
 	background:hsla(0,0%,0%,0.2);
-	border:1px solid #B0C4DE;
-	border-bottom:none;
-	border-radius: 10px 10px 0px 0px;
-	padding:20px;
-}
-.header1{
-	width:30%;
-	margin:50px auto 0px;
-	color: white;
-	background:hsla(0,0%,0%,0.2);
+	text-align: center;
 	border:1px solid #B0C4DE;
 	border-bottom:none;
 	border-radius: 10px 10px 0px 0px;
@@ -77,4 +68,27 @@ form{
 	background:#f2dede;
 	border-radius: 5px;
 	text-align:left;
+}
+ #myBtn {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: red;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 4px;
+      }
+
+      #myBtn:hover {
+      background-color: #555;
+}
+.img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
